--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "face-api.js": "^0.22.2",
+    "@vladmandic/face-api": "^1.7.13",
     "onnxruntime-web": "^1.11.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
