--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "facenet-onnxruntime-web",
   "version": "1.0.0",
   "dependencies": {
+    "@mediapipe/face_detection": "^0.4.1646425229",
     "@tensorflow/tfjs": "^4.15.0",
     "@tensorflow/tfjs-backend-wasm": "^4.15.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,7 +13,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "yarn setup && react-scripts start",
